<resources>
    <string name="app_name">StyleCreator</string>
    <string name="upload_picture">上传图片</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="change_background">更换背景</string>
    <string name="auto_login">自动登录</string>
    <string name="userInfo">用户信息</string>
    <string name="title_activity_crop">CropActivity</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="save_password">保存密码？</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_confirm_password">确认密码</string>
    <string name="error_invalid_email">邮箱地址不存在</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
</resources>
